0x00-hello_world/6-size
6-size.c: In function ‘main’:
6-size.c:10:39: error: expected ‘)’ before ‘sizeof’
   10 | printf("Size of a char: %1u byte(s)\n" sizeof(char));
      |                                       ^~~~~~~
      |                                       )
6-size.c:10:27: warning: format ‘%u’ expects a matching ‘unsigned int’ argument [-Wformat=]
   10 | printf("Size of a char: %1u byte(s)\n" sizeof(char));
      |                         ~~^
      |                           |
      |                           unsigned int
6-size.c:11:27: warning: format ‘%u’ expects argument of type ‘unsigned int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
   11 | printf("Size of an int: %1u byte(s)\n", sizeof(int));
      |                         ~~^             ~~~~~~~~~~~
      |                           |             |
      |                           unsigned int  long unsigned int
      |                         %1lu
6-size.c:12:31: warning: format ‘%u’ expects argument of type ‘unsigned int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
   12 | printf("Size of a long int: %1u byte(s)\n", sizeof(long int));
      |                             ~~^             ~~~~~~~~~~~~~~~~
      |                               |             |
      |                               unsigned int  long unsigned int
      |                             %1lu
6-size.c:13:36: warning: format ‘%u’ expects argument of type ‘unsigned int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
   13 | printf("Size of a long long int: %1u byte(s)\n", sizeof(long long int));
      |                                  ~~^             ~~~~~~~~~~~~~~~~~~~~~
      |                                    |             |
      |                                    unsigned int  long unsigned int
      |                                  %1lu
6-size.c:14:28: warning: format ‘%u’ expects argument of type ‘unsigned int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
   14 | printf("Size of a float: %1u byte(s)\n", sizeof(float));
      |                          ~~^             ~~~~~~~~~~~~~
      |                            |             |
      |                            unsigned int  long unsigned int
      |                          %1lu
